fix spacing for logo

--- a/style.css
+++ b/style.css
@@ -23,20 +23,42 @@ main{
     grid-column: 1 / 2;
     grid-row: 1 / 3;
     display: grid;
-    grid-template-rows: auto auto 1fr;
+    grid-template-rows: auto 1fr 2fr;
+
 }
 
 #sidebar > *{
     border: solid 1px red;
 }
 
-#sidebar > ul > *{
-    font-size: 20px;
+#sidebar > .logo{
+    padding: 4px;
+    border: solid 2px green;
+    display: grid;
+    grid-template-columns: 40px auto;
+    align-items: center;
+    gap: 6px;
 }
 
 #sidebar > .logo img{
-    max-width: 60px;
+    max-width: 40px;
+    grid-column: 1 / 2;
 }
+
+.logo > h1{
+    grid-column: 2 / 3;
+}
+
+#sidebar > .top,
+#sidebar > .bottom{
+
+}
+
+#sidebar > ul > *{
+    font-size: 24px;
+    padding: 4px;
+}
+
 
 .sb-item > img{
     max-width: 16px;
@@ -45,11 +67,13 @@ main{
 .sb-item > a {
     text-decoration: none;
     color: var(--light-white);
+    padding: 4px;
 }
+
+
 
 /* header */
 #header{
-    border: solid 1px green;
     grid-column: 2 / 3;
     display: grid;
     grid-template-columns: 3fr 1fr;
@@ -62,9 +86,27 @@ main{
 }
 
 /* search bar */
-.search-container{
+#header .search-container{
     grid-column: 1 / 2;
+    display: grid;
+    grid-template-columns: auto 1fr;
+    align-items: center;
+    gap: 10px;
+    padding: 16px;
 }
+
+.search-container > img {
+    width: 30px;
+}
+
+.search-container > input{
+    background-color: var(--darker-white);
+    height: 2em;
+    width: max(200px, 80%);
+    border: solid 1px black;
+    border-radius: 10px;
+}
+
 
 /* top right */
 .icons-container{
@@ -75,7 +117,7 @@ main{
 }
 
 .icons-container > img{
-    width: max(40px, 10%);
+    width: 30px;
 }
 .icons-container > img:nth-child(2){
     border: solid 1px lightgray;
@@ -130,7 +172,7 @@ main{
     width: 6em;
     justify-self: center;
     border: solid 1px black;
-    border-radius: 8px;
+    border-radius: 10px;
 }
 
 
@@ -144,7 +186,7 @@ main{
 }
 
 #content > *{
-    margin: 16px;
+    padding: 16px;
 }
 
 /* projects */
